--- a/plugin.xml
+++ b/plugin.xml
@@ -54,8 +54,8 @@
               <source url="https://cdn.cocoapods.org/"/>
             </config>
             <pods use-frameworks="true">
-              <pod name="GoogleSignIn" />
-              <pod name="GoogleUtilities" />
+              <pod name="GoogleSignIn" spec="~> 7.0.0" />
+              <pod name="GoogleUtilities" spec="~> 8.0.2" />
             </pods>
           </podspec>
 
