iOS config in plugin changes

--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="cordova-plugin-google-signin" version="1.0.0" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+<plugin id="cordova-plugin-google-signin" version="2.1.0" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
     <name>GoogleSignInPlugin</name>
     <js-module name="GoogleSignInPlugin" src="www/GoogleSignInPlugin.js">
         <clobbers target="cordova.plugins.GoogleSignInPlugin" />
@@ -48,6 +48,11 @@
               </dict>
             </array>
           </config-file>
+
+        <preference name="CLIENT_ID" />
+        <config-file target="*-Info.plist" parent="GIDClientID">
+            <string>$CLIENT_ID</string>
+        </config-file>
 
           <podspec>
             <config>
