REVERSED_CLIENT_ID Returns, it is necessary

--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="cordova-plugin-google-signin" version="2.3.0" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+<plugin id="cordova-plugin-google-signin" version="2.4.0" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
     <name>GoogleSignInPlugin</name>
     <js-module name="GoogleSignInPlugin" src="www/GoogleSignInPlugin.js">
         <clobbers target="cordova.plugins.GoogleSignInPlugin" />
@@ -33,7 +33,7 @@
         </config-file>
         <source-file src="src/ios/GoogleSignInPlugin.m" />
 
-        <!-- <preference name="REVERSED_CLIENT_ID" />
+        <preference name="REVERSED_CLIENT_ID" />
         <config-file target="*-Info.plist" parent="CFBundleURLTypes">
             <array>
               <dict>
@@ -47,7 +47,7 @@
                   </array>
               </dict>
             </array>
-          </config-file> -->
+          </config-file>
 
         <preference name="IOS_CLIENT_ID" />
         <config-file target="*-Info.plist" parent="GIDClientID">
